--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -13,6 +13,7 @@
     "Oops": "Упс...",
     "NotExisted": "Похоже, такой страницы не существует или она была удалена...",
     "LoadingData": "Загрузка данных...",
+    "TurnOffDeny": "Перед использованием сервиса, пожалуйста, отключите запрет на отправку геолокации!",
 
     "YouLeftFromAccount": "Вы вышли из аккаунта",
     "Profile": "Профиль",
