--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -13,6 +13,7 @@
     "Oops": "Oops...",
     "NotExisted": "It appears that this page does not exist or has been deleted...",
     "LoadingData": "Loading data...",
+    "TurnOffDeny": "Before using the service, please disable the ban on sending geolocation!",
 
     "YouLeftFromAccount": "You have left your account",
     "Profile": "Profile",
