--- a/client/public/locales/de/translation.json
+++ b/client/public/locales/de/translation.json
@@ -14,6 +14,7 @@
     "NotExisted": "Es scheint, dass diese Seite nicht existiert oder gelöscht wurde...",
     "LoadingData": "Daten werden geladen...",
     "TurnOffDeny": "Bitte deaktivieren Sie vor der Nutzung des Dienstes das Verbot der Geolokalisierung!",
+    "LoadingNotReoload": "Der Vorgang läuft, bitte laden Sie die Seite nicht neu",
 
     "YouLeftFromAccount": "Sie sind von Ihrem Konto abgemeldet",
     "Profile": "Profil",
