--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -14,6 +14,7 @@
     "NotExisted": "Похоже, такой страницы не существует или она была удалена...",
     "LoadingData": "Загрузка данных...",
     "TurnOffDeny": "Перед использованием сервиса, пожалуйста, отключите запрет на отправку геолокации!",
+    "LoadingNotReoload": "Проводится операция, пожалуйста, не перезагружайте страницу",
 
     "YouLeftFromAccount": "Вы вышли из аккаунта",
     "Profile": "Профиль",
