--- a/client/public/locales/ko/translation.json
+++ b/client/public/locales/ko/translation.json
@@ -14,6 +14,7 @@
     "NotExisted": "이 페이지가 존재하지 않거나 삭제된 것 같습니다...",
     "LoadingData": "데이터 로드 중...",
     "TurnOffDeny": "서비스를 사용하기 전에 지리적 위치 전송 금지를 비활성화하십시오!",
+    "LoadingNotReoload": "작업이 진행 중입니다. 페이지를 새로고침하지 마세요.",
 
     "YouLeftFromAccount": "당신은 계정을 떠났습니다",
     "Profile": "프로필",
